# genlauncher-linux

./: .gitignore  AGENTS.md  README.md  __main__.py  __web__.py  app.py  auto-git-config.sh  config.py  logging_setup.py  pyproject.toml  pyrightconfig.json
models/: __init__.py  enums.py  mod.py  options.py  repo.py
screens/: add_mod_screen.py  credits_screen.py  help_screen.py  home_screen.py  options_screen.py
services/: download_manager.py  image_service.py  mod_persistence.py  mod_service.py  mod_utils.py  options_service.py  repo_service.py  s3_service.py  steam_service.py  symlink_service.py
styles/: app.tcss
tests/: conftest.py  test_entry_point.py  test_image_service.py  test_models.py  test_services.py  test_thumbnail_widget.py  test_ui.py
widgets/: __init__.py  action_panel.py  key_hints.py  mod_row.py  status_panel.py  thumbnail.py  thumbnail_cell.py
